Made changes in home
added more Hs

--- a/BSCS23184_Home.html
+++ b/BSCS23184_Home.html
@@ -51,7 +51,7 @@
  <div class="image-container">
       <img src="BSCS23184_image1.jpg" alt="Background Image" width="100%">
       <div class="text-overlay">
-        <h1>RIZZ TECH</h1>
+        <h1>RIZZ TECHHHHHHHHHHHH</h1>
        
       </div>
     </div>
